--- a/LifeSharpAndroid/Resources/layout/Gallery.axml
+++ b/LifeSharpAndroid/Resources/layout/Gallery.axml
@@ -1,8 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:minWidth="25px"
+    android:minHeight="25px"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:id="@+id/linearLayout1">
+    <android.support.v7.widget.RecyclerView
+    	android:id="@+id/recyclerView"
+    	android:scrollbars="horizontal"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent" />
 </LinearLayout>
-
