--- a/LifeSharpAndroid/Resources/layout/Main.axml
+++ b/LifeSharpAndroid/Resources/layout/Main.axml
@@ -45,4 +45,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonLogin" />
+    <Button
+        android:text="Image Gallery..."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonGallery" />
 </LinearLayout>
