Add support for querying streams and uploading into a default one (the spinner doesn't work yet)

--- a/LifeSharpAndroid/Resources/layout/Main.axml
+++ b/LifeSharpAndroid/Resources/layout/Main.axml
@@ -50,4 +50,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buttonGallery" />
+    <TextView
+        android:text="Choose a default stream:"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView1" />
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/defaultStream" />
 </LinearLayout>
