Stubbed out some new notification configuration

--- a/LifeSharpAndroid/Resources/layout/Main.axml
+++ b/LifeSharpAndroid/Resources/layout/Main.axml
@@ -14,11 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/checkEnable" />
-    <CheckBox
-        android:text="Enable upload notifications"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkUploadNotifications" />
     <TextView
         android:text="Login Name:"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -60,4 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/defaultStream" />
+    <Button
+        android:text="Configure Notifications..."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonNotifications" />
 </LinearLayout>
