--- a/LifeSharpAndroid/Resources/layout/Gallery.axml
+++ b/LifeSharpAndroid/Resources/layout/Gallery.axml
@@ -16,7 +16,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat" />
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/galleryRecyclerView"
         android:scrollbars="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
