Subclass ImageView to fix image dimensions
<ImageView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scaleType="centerCrop"
	... />
Was producing inconsistent image height on different devices and screen densities. To ensure cross-device consistency, we subclass ImageView and perform our own height calculations.

<lifesharp.DynamicImageView
	android:maxHeight="240dp"
	lifesharp:squareImage="true"
	... />
maxHeight and squareImage are mutually exclusive.

If squareImage is set, the image view's height will always be equal to its width. This takes precedence over maxHeight.
If maxHeight is set, the image view's height will be no taller than maxHeight at most, but may be shorter.
Otherwise, the image view's height relative to its width retains the original aspect ratio of the image being displayed.

--- a/LifeSharpAndroid/Resources/layout/GalleryImageTile.axml
+++ b/LifeSharpAndroid/Resources/layout/GalleryImageTile.axml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:lifesharp="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content">
-    <ImageView
+    <lifesharp.DynamicImageView
         android:id="@+id/galleryTileImage"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        lifesharp:squareImage="true" />
     <TextView
         android:id="@+id/galleryTileTime"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_alignBottom="@id/galleryTileImage"
         android:layout_alignLeft="@id/galleryTileImage" />
     <TextView
         android:id="@+id/galleryTileBadges"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_alignBottom="@id/galleryTileTime"
