--- a/LifeSharpAndroid/Resources/layout/GalleryCardView.axml
+++ b/LifeSharpAndroid/Resources/layout/GalleryCardView.axml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/galleryCardView"
     android:layout_gravity="center"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="0dp"
     card_view:cardElevation="4dp"
@@ -11,10 +11,10 @@
     android:theme="@style/ThemeOverlay.AppCompat.Light">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
         android:padding="@dimen/card_view_padding">
-        <ImageView
+        <lifesharp.DynamicImageView
             android:id="@+id/galleryCardImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/galleryCardLatest"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
