--- a/LifeSharpAndroid/Resources/layout/GalleryImageTile.axml
+++ b/LifeSharpAndroid/Resources/layout/GalleryImageTile.axml
@@ -13,7 +13,7 @@
         lifesharp:squareImage="true" />
     <TextView
         android:id="@+id/galleryTileTime"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/galleryTileText"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -21,9 +21,9 @@
         android:layout_alignLeft="@id/galleryTileImage" />
     <TextView
         android:id="@+id/galleryTileBadges"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/galleryTileText"
-        android:layout_alignBottom="@id/galleryTileTime"
-        android:layout_alignLeft="@id/galleryTileImage" />
+        android:layout_above="@id/galleryTileTime"
+        android:layout_alignRight="@id/galleryTileImage" />
 </RelativeLayout>
